a1/brendan_gordon/TEST_PROGRAMS/invalidtype/maxim_gorshkov/prog4.min
# Using semantic rules, cannot combine Strings and other types in an expression

var z : float;

z = 99999999999.99;
print "I love Lydia x"+z;

